[25/5] add songs, fix playlist and song titles overflow, change dynamic now playing thumbnails

--- a/src/components/NowPlaying.css
+++ b/src/components/NowPlaying.css
@@ -31,9 +31,7 @@
   min-height: 40px;
   min-width: 0px;
   overflow: hidden;
-  padding: 0px;
-  padding-left: 40px;
-  padding-right: 40px;
+  width: 13em;
   text-align: center;
   touch-action: manipulation;
   transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
@@ -275,4 +273,8 @@
 
 .now-playing-song-info a:hover {
   color: #2daaed;
+}
+
+.song-list-scroll::-webkit-scrollbar {
+  display: none;
 }
